# brave-core

./: DEPS  Jenkinsfile  package-lock.json  package.json
browser/: brave_browser_process_impl.h  brave_content_browser_client.cc  browser_context_keyed_service_factories.cc  sources.gni
common/: BUILD.gn
components/brave_federated/: BUILD.gn  brave_federated_service.cc  brave_federated_service.h  data_store_service.cc  data_store_service.h  features.cc  features.h  features_unittest.cc  operational_patterns.cc  operational_patterns.h
components/brave_federated/data_stores/: ad_notification_timing_data_store.cc  ad_notification_timing_data_store.h  ad_notification_timing_data_store_unittest.cc  data_store.cc  data_store.h  data_store_unittest.cc  test_data_store.cc  test_data_store.h
components/brave_federated/resources/: BUILD.gn
components/brave_federated/resources/internals/: BUILD.gn  federated_learning_internals.css  federated_learning_internals.html  federated_learning_internals.js
components/brave_federated/test/: BUILD.gn
components/brave_federated_learning/: BUILD.gn  brave_federated_learning_features.cc  brave_federated_learning_features.h  brave_federated_learning_features_unittest.cc  brave_federated_learning_service.cc  brave_federated_learning_service.h  data_store_service.cc  data_store_service.h  operational_patterns.cc  operational_patterns.h
components/brave_federated_learning/data_stores/: ad_notification_timing_data_store.cc  ad_notification_timing_data_store.h  ad_notification_timing_data_store_unittest.cc  data_store.cc  data_store.h  data_store_unittest.cc  test_data_store.cc  test_data_store.h
components/brave_federated_learning/test/: BUILD.gn
ios/: BUILD.gn
patches/: base-threading-thread_restrictions.h.patch  chrome-VERSION.patch  (+1 more)
(+137 files in other folders)
